# ComfyUI-Lightx2vWrapper

./: .gitignore  .gitmodules  .ruff.toml  LICENSE  README.md  README_CN.md  __init__.py  bridge.py  config_builder.py  data_models.py  file_handlers.py  model_utils.py  nodes.py  nodes_refactored.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
example_workflows/: seko_talk_multi_talk_h.json  wan2.2_lightx2v_h.json
examples/: i2v_with_lora.json  i2v_workflow.json  wan_i2v.json  wan_i2v_with_audio.json  wan_i2v_with_distill_lora.json  wan_t2v_with_distill_lora.json
lightx2v_nodes/: __init__.py  config.py  factory.py  models.py  nodes.py  universal_bridge.py
lightx2v_refactored/: __init__.py  config.py  factory.py  models.py  nodes.py
